Fix for issue: Back button click on mobilenavbar is not working in liveform's page layout.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
@@ -310,7 +310,8 @@
           .btn-close {
             position: absolute;
             padding: 6pt;
-            right: 0;
+            top: 1px;
+            right: 10px;
           }
 
           &:before {
